Project will be continued

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,18 @@
 	        </execution>
 	    </executions>
 		</plugin>
-
+			
+<plugin>
+            <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <configuration>
+                    <mainClass>com.enesusta</mainClass>
+                    <arguments>
+                       <argument>argument1</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
 
 		  
 		    <plugin>
